--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <link rel="icon" href="/public/ciencia-da-computacao.png" type="image/x-icon">
+    <link rel="icon" href="/ciencia-da-computacao.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
